--- a/packages/aws-lambda-graphql/package.json
+++ b/packages/aws-lambda-graphql/package.json
@@ -49,7 +49,10 @@
   },
   "engineStrict": true,
   "devDependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.11",
+    "aws-appsync-subscription-link": "^2.2.0",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.6",
     "mock-socket": "^8.0.5",
