--- a/packages/aws-lambda-graphql/package.json
+++ b/packages/aws-lambda-graphql/package.json
@@ -31,12 +31,12 @@
   ],
   "description": "Apollo server for AWS Lambda with WebSocket subscriptions support over API Gateway v1 + v2)",
   "dependencies": {
-    "@types/aws-lambda": "^8.10.36",
-    "@types/ioredis": "^4.16.6",
-    "apollo-server-core": "^2.9.14",
-    "apollo-server-lambda": "^2.9.14",
+    "@types/aws-lambda": "^8.10.61",
+    "@types/ioredis": "^4.17.3",
+    "apollo-server-core": "^2.17.0",
+    "apollo-server-lambda": "^2.17.0",
     "aws-sdk": "^2.746.0",
-    "iterall": "^1.2.2",
+    "iterall": "^1.3.0",
     "ulid": "^2.3.0"
   },
   "peerDependencies": {
@@ -51,14 +51,14 @@
   "devDependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.11",
+    "apollo-link": "^1.2.14",
     "aws-appsync": "^3.0.3",
     "aws-appsync-subscription-link": "^2.2.0",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.6",
-    "mock-socket": "^8.0.5",
-    "subscriptions-transport-ws": "^0.9.16",
-    "wait-for-expect": "1.1.0"
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^6.2.0",
+    "mock-socket": "^9.0.3",
+    "subscriptions-transport-ws": "^0.9.18",
+    "wait-for-expect": "^3.0.2"
   },
   "scripts": {
     "prebuild": "rimraf dist && rimraf tsconfig.tsbuildinfo",
